Fixing layout issues

--- a/Responsive Web Design Projects/Technical Documentation Page/styles.css
+++ b/Responsive Web Design Projects/Technical Documentation Page/styles.css
@@ -106,13 +106,14 @@ pre {
 }
 
 #main-doc {
-    margin: 20px 30px 20px;
+    margin: 20px 0 20px;
+    padding: 0 20px;
     color: #edf0f1;
     width: 100vw;
 }
 
 .main-section {
-    padding: 20px 10px 20px;
+    /* padding: 20px 20px 20px; */
 }
 
 .main-section h2 {
